--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fav-type.is-integer",
+  "name": "@fav/type.is-integer",
   "version": "0.5.0",
   "description": "Checks whether a value is an integer or not.",
   "main": "index.js",
