--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sttk/fav-type.git"
+    "url": "git+https://github.com/sttk/fav-type.is-integer.git"
   },
   "keywords": [
     "integer",
@@ -37,9 +37,9 @@
   "author": "Takayuki Sato",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sttk/fav-type/issues"
+    "url": "https://github.com/sttk/fav-type.is-integer/issues"
   },
-  "homepage": "https://github.com/sttk/fav-type#readme",
+  "homepage": "https://github.com/sttk/fav-type.is-integer#readme",
   "devDependencies": {
     "browserify": "^14.4.0",
     "eslint": "^4.8.0",
